--- a/src/index.css
+++ b/src/index.css
@@ -179,6 +179,10 @@ body {
     display: none;
   }
 
+  .card {
+    margin-bottom: 20px !important;
+  }
+
   .skill-container {
     margin-top: 0 !important;
   }
