--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ body {
 }
 
 .banner {
-  background-color: #0B192C;
+  background-color: #100720;
   color: white;
   text-align: center;
   padding: 50px 20px;
@@ -71,7 +71,7 @@ body {
 }
 
 .skill-item {
-  border: 2px solid #0B192C !important;
+  border: 2px solid #100720 !important;
   border-radius: 20px !important;
   font-weight: bold !important;
 }
@@ -89,11 +89,11 @@ body {
 }
 
 .card-title {
-  color: #0B192C;
+  color: #100720;
 }
 
 .project-detail {
-  color: #0B192C;
+  color: #100720;
 }
 
 .overlay {
@@ -121,7 +121,7 @@ body {
   margin-top: 80%;
   font-size: 30px;
   letter-spacing: 2px;
-  color: #0B192C;
+  color: #100720;
 }
 
 .card:hover .overlay {
@@ -137,7 +137,7 @@ body {
 }
 
 .links a {
-  color: #0B192C !important;
+  color: #100720 !important;
 }
 
 /*---------------------------------FOOTER--------------------------------*/
