--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,10 @@ body {
   overflow-x: hidden;
 }
 
+.logo {
+  font-size: 2rem;
+}
+
 .banner {
   background-color: #100720;
   color: white;
@@ -32,7 +36,7 @@ body {
 }
 
 .slogan {
-  font-size: 1.5rem;
+  font-size: 1rem;
   font-family: monospace;
   border-right: 2px solid #100720;
   white-space: nowrap;
@@ -58,15 +62,9 @@ body {
   }
 }
 
-.about-me {
-  font-weight: 300;
-  font-size: 24px;
-}
-
-
-.description {
-  color: #F9E8C9;
-  font-size: 16px !important;
+.intro-name {
+  font-size: 2rem;
+  font-weight: 200;
 }
 
 .project-detail-banner {
@@ -85,13 +83,8 @@ body {
   }
 }
 
-.description {
-  font-size: 20px;
-  font-weight: 200;
-}
-
 .banner-img {
-  margin-top: 15%;
+  margin-top: 20%;
   width: 200px;
   height: 200px;
   object-fit: cover;
@@ -103,32 +96,70 @@ body {
   color: #F9E8C9;
 }
 
-/*------------------------SKILLS--------------------------*/
-.skill-container {
+/*-------------------------------ABOUT CONTAINER-----------------*/
+
+.about-me {
+  font-weight: 300;
+  font-size: 24px;
+}
+
+.about-me-container {
   background: #F9E8C9;
-  border-radius: 20px;
+  border-radius: 10px;
+}
+
+.women-code-img {
+  object-fit: cover;
+  height: 400px;
+}
+
+.description {
+  font-size: 20px;
+  font-weight: 200;
+}
+
+.contact-btn {
+  border: 2px solid #100720;
+}
+
+.contact-btn:hover {
+  background-color: #100720 !important;
+  color: #F9E8C9 !important;
+}
+
+/*------------------------SKILLS--------------------------*/
+.skill-heading {
+  color: #F9E8C9;
+}
+
+.skill-container {
+  margin-top: 10% !important;
+  background: #100720;
+  border-radius: 10px;
 }
 
 .skill-item {
-  border: 2px solid #100720 !important;
+  border: 2px solid #F9E8C9 !important;
   border-radius: 20px !important;
   font-weight: 600 !important;
+  color: #F9E8C9;
 }
 
 .skill-icon {
-  font-size: 2rem;
-  color: #100720;
+  height: 50px;
+  width: 50px;
 }
 
 /*------------------------CARDS---------------------------*/
 .card {
   height: 500px;
-
+  border: 2px solid #100720 !important;
 }
 
 .card-img-top {
   transition: transform 0.5s;
   height: 200px;
+  object-fit: cover;
 }
 
 .card-title {
@@ -209,6 +240,10 @@ body {
 
 /*-----------------------MEDIA QUERY----------------------------------*/
 @media (min-width: 375px) and (max-width: 768px) {
+  .intro-name {
+    font-size: 1.3rem;
+  }
+
   .banner {
     height: 100vh;
   }
@@ -239,14 +274,31 @@ body {
     display: none;
   }
 
+  .about-me-container {
+    width: 100% !important;
+    padding-top: 30px !important;
+    padding-bottom: 30px !important;
+    margin-left: 0px !important;
+
+    margin-bottom: 10% !important;
+  }
+
+  .about-heading {
+    margin-top: 3% !important;
+  }
+
+  .women-code-img {
+    height: 200px;
+  }
+
   .card {
     margin-bottom: 20px !important;
   }
 
   .skill-container {
+    width: 100% !important;
     margin-top: 0 !important;
-    margin-right: 12px !important;
-    margin-left: 12px !important;
+    margin-left: 0 !important;
   }
 
   .skills-list {
@@ -261,7 +313,8 @@ body {
   }
 
   .skill-icon {
-    font-size: 20px !important;
+    height: 50px !important;
+    width: 30px !important;
     padding-top: 10px !important;
     padding-bottom: 10px !important;
   }
