--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ body {
 
 .logo {
   font-size: 2rem;
+  font-family: "Architects Daughter", cursive;
 }
 
 .banner {
@@ -240,6 +241,11 @@ body {
 
 /*-----------------------MEDIA QUERY----------------------------------*/
 @media (min-width: 375px) and (max-width: 768px) {
+
+  .logo {
+    font-size: 1.4rem;
+  }
+
   .intro-name {
     font-size: 1.3rem;
   }
@@ -279,7 +285,8 @@ body {
     padding-top: 30px !important;
     padding-bottom: 30px !important;
     margin-left: 0px !important;
-
+    margin-right: 0 !important;
+    border-radius: 0 !important;
     margin-bottom: 10% !important;
   }
 
@@ -299,6 +306,7 @@ body {
     width: 100% !important;
     margin-top: 0 !important;
     margin-left: 0 !important;
+    border-radius: 0 !important;
   }
 
   .skills-list {
