added small changes

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ body {
 }
 
 .logo {
-  font-size: 2rem;
+  font-size: 2.5rem;
   font-family: "Architects daughter";
   font-weight: 400;
 }
@@ -29,7 +29,7 @@ body {
 }
 
 .heading-one {
-  font-size: 8rem;
+  font-size: 3.5rem;
   font-weight: 100;
   font-style: normal;
   color: #F9E8C9;
@@ -67,7 +67,7 @@ body {
 }
 
 .intro-name {
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: 200;
 }
 
@@ -88,7 +88,7 @@ body {
 }
 
 .banner-img {
-  margin-top: 15%;
+  margin-top: 10%;
   width: 200px;
   height: 200px;
   object-fit: cover;
@@ -290,10 +290,14 @@ body {
 }
 
 /*-----------------------MEDIA QUERY----------------------------------*/
-@media (min-width: 375px) and (max-width: 768px) {
+@media (min-width: 375px) and (max-width: 1024px) {
 
   .logo {
     font-size: 1.4rem;
+  }
+
+  .banner-img {
+    margin-top: 10% !important;
   }
 
   .intro-name {
@@ -305,8 +309,8 @@ body {
   }
 
   .heading-one {
-    margin-top: 7px !important;
-    font-size: 2.3rem;
+    margin-top: 15px !important;
+    font-size: 2rem;
     font-weight: 200;
     color: #F9E8C9;
     animation: fadeInScale 2s ease-out forwards;
@@ -315,12 +319,17 @@ body {
   }
 
   .slogan {
-    white-space: normal;
-    word-wrap: break-word;
-    animation: none;
-    width: auto;
-    border-right: none;
-    font-size: 1rem !important;
+    display: none;
+  }
+
+  .intro-name {
+    font-size: 1.2rem;
+    font-weight: 200;
+  }
+
+  .icon {
+    font-size: 20px !important;
+    margin-top: 0 !important;
   }
 
   .description {
@@ -328,8 +337,8 @@ body {
   }
 
   .banner-img {
-    height: 150px;
-    width: 150px;
+    height: 130px;
+    width: 130px;
   }
 
   .about-me-container {
